users-service/users/src/main/java/com/example/users/errors/exceptions/userExceptions/Unauthorized.java
package com.example.users.errors.exceptions.userExceptions;

public class Unauthorized extends RuntimeException
{
    public Unauthorized(String message)
    {
        super(message);
    }
}
